Fix submission resource overflow in submission edit
Closes #1205

--- a/src/pretalx/static/cfp/scss/_layout.scss
+++ b/src/pretalx/static/cfp/scss/_layout.scss
@@ -257,6 +257,7 @@ footer {
 
   .form-group {
     display: flex;
+    flex-direction: column;
     padding-right: 16px;
 
     .bootstrap-multi-input {
